# ProjectStars

./: .gitattributes  .gitignore  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/src/: main.py
backend/src/accelerator/: models.py  routes.py  schemas.py  service.py
backend/src/auth/: models.py  routes.py  schemas.py  service.py
backend/src/auth/admin/: create_superadmin.py  routes.py  schemas.py  service.py
backend/src/core/: config.py  openapi_config.py
backend/src/db/: database.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 06389a39de43_init.py  0fd30914554a_init.py  201004cf02f2_init.py  5f07710a2193_init.py  6da76d05bf59_init.py  7a6c7f006dee_init.py  8adc95458407_init.py  9c70d843b5d5_init.py  df9675770e74_init.py
backend/src/project/: models.py  routes.py  schemas.py  service.py
backend/src/project/project_research/: models.py  routes.py  schemas.py  service.py
backend/src/user/: models.py  routes.py  schemas.py  service.py
frontend/: .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json
frontend/HTML&CSS/: AcelMain.css  AcelMain.html  Hab.css  Hab.html  HabProto.css  HabProto.html  HabProto.rar  Login.css  Login.html  Login2.css  Login2.html  Profile.css  Profile.html  Registration.css  Registration.html
frontend/src/: App.js  App.jsx
frontend/src/api/: auth.js  axios.js
frontend/src/components/: Layout.jsx  PrivateRoute.jsx  ProtectedRoute.jsx
frontend/src/context/: AuthContext.js
(+15 files in other folders)
